--- a/Portfolio.html
+++ b/Portfolio.html
@@ -201,8 +201,7 @@
     <section id="contact">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
-            <div class="contact-form">
-                <!-- Replace the form below with your Google Forms embed code -->
+            <div class="google-form-wrapper" id="google-form-wrapper">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScjnp9q178VplCfOE9LwIbKZzlfrb5JJHqdnqmmRNqmY8P5Og/viewform?usp=dialog" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
         </div>
@@ -213,7 +212,7 @@
             <div class="social-links">
                 <a href="https://github.com/Sbilalahmad" class="social-icon"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/syed-bilal-ahmad-454468203/" class="social-icon"><i class="fab fa-linkedin"></i></a>
-                <a href="syedbilalahmad397@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
+                <a href="https://mail.google.com/mail/u/0/#inbox" class="social-icon"><i class="fas fa-envelope"></i></a>
             </div>
             <p>&copy; 2028 Syed Bilal Ahmad . All rights reserved.</p>
         </div>
@@ -265,5 +264,59 @@
             applyTheme('light'); // Default to light
         }
     </script>
+    <script>
+        // Theme switching for Google Form wrapper
+        function applyGoogleFormTheme() {
+            const wrapper = document.getElementById('google-form-wrapper');
+            if(document.body.classList.contains('dark-theme')) {
+                wrapper.style.background = '#181a1b';
+                wrapper.style.padding = '2rem';
+                wrapper.style.borderRadius = '12px';
+            } else {
+                wrapper.style.background = '#fff';
+                wrapper.style.padding = '2rem';
+                wrapper.style.borderRadius = '12px';
+            }
+        }
+        // Run on load and on theme toggle
+        document.addEventListener('DOMContentLoaded', applyGoogleFormTheme);
+        document.getElementById('theme-toggle').addEventListener('click', function() {
+            setTimeout(applyGoogleFormTheme, 100); // Wait for theme class to toggle
+        });
+    </script>
+    <script>
+function highlightCenterProjectCard() {
+    const grid = document.querySelector('.projects-grid');
+    if (!grid) return;
+    const cards = Array.from(grid.querySelectorAll('.project-card'));
+    const gridRect = grid.getBoundingClientRect();
+    const gridCenter = gridRect.left + gridRect.width / 2;
+
+    let minDist = Infinity;
+    let centerCard = null;
+
+    cards.forEach(card => {
+        const cardRect = card.getBoundingClientRect();
+        const cardCenter = cardRect.left + cardRect.width / 2;
+        const dist = Math.abs(gridCenter - cardCenter);
+        if (dist < minDist) {
+            minDist = dist;
+            centerCard = card;
+        }
+    });
+
+    cards.forEach(card => card.classList.remove('highlighted'));
+    if (centerCard) centerCard.classList.add('highlighted');
+}
+
+// Run on scroll and on load
+const grid = document.querySelector('.projects-grid');
+if (grid) {
+    grid.addEventListener('scroll', highlightCenterProjectCard);
+    window.addEventListener('resize', highlightCenterProjectCard);
+    window.addEventListener('DOMContentLoaded', highlightCenterProjectCard);
+    setTimeout(highlightCenterProjectCard, 100); // For initial animation
+}
+</script>
 </body>
 </html>
